
For bug <NUM>, see http://bugzilla.osafoundation.org/show_bug.cgi?id=<NUM>

Version 2.4.0 ->
----------------------
 - PyLucene with JCC now a subproject of the Apache Lucene project
 - documentation moved to http://lucene.apache.org/pylucene
 - added java.util.Arrays to the build to bridge the Java array/collection gap
 - added collections.py module with JavaSet class, a Python java.util.Set
 - 

Version 2.3.2 -> 2.4.0
----------------------
 - fixed Debian bug http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=499599
 - arrays are now wrapped with JArray() instances instead of expanded into lists
 - return by value in arrays now supported
 - PythonTermDocs removed since arrays can now receive values
 - PythonReader removed since arrays now wrapped
 - added InstantiatedIndex contrib to build
 - PyLucene built with JCC 2.1

Version 2.3.1 -> 2.3.2
----------------------
 - fixed code generation for clone() broken by finalization proxy work
 - added 'union' and 'NULL' to the list of reserved words
 - fixed castCheck() to work with finalization proxies
 - added scorePayload() delegator to PythonSimilarityDelegator
 - added support for --install-dir and --use-distutils options
 - added support for INSTALL_OPT to Makefile
 - fixed basic samples to initialize VM
 - added bdist target to Makefile

Version 2.3 -> 2.3.1
--------------------
 - fixed bug in JCC using the wrong field modifiers for setter (Bill Janssen)
 - added missing calls for generating wrappers for ancestors of Exception
 - added missing call for generating wrappers for String
 - added PythonTokenizer for implementing complete tokenizers in Python

Version 2.2 -> 2.3
------------------

 - PyLucene with JCC introduced
 - added support for Python 2.3.5
 - added support for using clone() with extensions
 - renamed decRef() (and incRef()) native extensions method to pythonDecRef()
 - improved error reporting a bit
 - JCC now generates Python properties for get/set/is methods