@@ -1,6 +1,4 @@
 # ====================================================================
-#   Copyright (c) 2004-2008 Open Source Applications Foundation
-#
 #   Licensed under the Apache License, Version 2.0 (the "License");
 #   you may not use this file except in compliance with the License.
 #   You may obtain a copy of the License at
