@@ -7,6 +7,7 @@ Version 2.4.0 ->
  - documentation moved to http://lucene.apache.org/pylucene
  - added java.util.Arrays to the build to bridge the Java array/collection gap
  - added collections.py module with JavaSet class, a Python java.util.Set
+ - fixed bug in PythonQueryParser overriding wrong method (Aaron Lav)
  - 
 
 Version 2.3.2 -> 2.4.0
